--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
         "@types/node": "^22.4.0",
         "@types/react": "18.3.10",
         "@types/react-dom": "^18.3.0",
+        "axios": "^1.7.2",
         "dayjs": "^1.11.13",
         "eslint": "8.57.0",
         "eslint-config-next": "14.2.13",
         "googleapis": "^144.0.0",
         "i18next": "^23.13.0",
+        "js-cookie": "^3.0.5",
         "lodash": "^4.17.21",
         "mantine-datatable": "^1.7.35",
         "next": "14.2.13",
@@ -37,13 +39,17 @@
         "react-popper": "^2.3.0",
         "react-redux": "^9.1.2",
         "react-select": "^5.7.0",
+        "sweetalert2": "^11.6.13",
+        "sweetalert2-react-content": "^5.0.7",
         "typescript": "^5.3.3",
         "universal-cookie": "^7.2.0",
+        "jwt-decode": "^4.0.0",
         "yup": "^1.4.0"
     },
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.3",
         "@tailwindcss/typography": "^0.5.8",
+        "@types/js-cookie": "^3.0.6",
         "@types/lodash": "^4.17.10",
         "@types/react-flatpickr": "^3.8.11",
         "@types/react-redux": "^7.1.32",
