--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "dayjs": "^1.11.13",
         "eslint": "8.57.0",
         "eslint-config-next": "14.2.13",
+        "file-saver": "^2.0.5",
         "google-auth-library": "^9.15.0",
         "googleapis": "^144.0.0",
         "i18next": "^23.13.0",
@@ -32,6 +33,7 @@
         "mantine-datatable": "^1.7.35",
         "next": "14.2.13",
         "ni18n": "^1.0.5",
+        "papaparse": "^5.4.1",
         "react": "18.3.1",
         "react-animate-height": "^3.1.0",
         "react-apexcharts": "^1.4.0",
@@ -46,14 +48,17 @@
         "sweetalert2-react-content": "^5.0.7",
         "typescript": "^5.3.3",
         "universal-cookie": "^7.2.0",
+        "xlsx": "^0.18.5",
         "yup": "^1.4.0"
     },
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.3",
         "@tailwindcss/typography": "^0.5.8",
+        "@types/file-saver": "^2.0.7",
         "@types/js-cookie": "^3.0.6",
         "@types/lodash": "^4.17.10",
         "@types/node-fetch": "^2.6.12",
+        "@types/papaparse": "^5.3.15",
         "@types/react-flatpickr": "^3.8.11",
         "@types/react-redux": "^7.1.32",
         "autoprefixer": "^10.4.17",
