--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "file-saver": "^2.0.5",
         "google-auth-library": "^9.15.0",
         "googleapis": "^144.0.0",
+        "he": "^1.2.0",
         "i18next": "^23.13.0",
         "joi": "^17.13.3",
         "js-cookie": "^3.0.5",
@@ -55,6 +56,7 @@
         "@tailwindcss/forms": "^0.5.3",
         "@tailwindcss/typography": "^0.5.8",
         "@types/file-saver": "^2.0.7",
+        "@types/he": "^1.2.3",
         "@types/js-cookie": "^3.0.6",
         "@types/lodash": "^4.17.10",
         "@types/node-fetch": "^2.6.12",
