--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "react": "18.3.1",
         "react-animate-height": "^3.1.0",
         "react-apexcharts": "^1.4.0",
+        "react-copy-to-clipboard": "^5.1.0",
         "react-dom": "18.3.1",
         "react-flatpickr": "^3.10.13",
         "react-i18next": "^15.0.2",
@@ -61,6 +62,7 @@
         "@types/lodash": "^4.17.10",
         "@types/node-fetch": "^2.6.12",
         "@types/papaparse": "^5.3.15",
+        "@types/react-copy-to-clipboard": "^5.0.7",
         "@types/react-flatpickr": "^3.8.11",
         "@types/react-redux": "^7.1.32",
         "autoprefixer": "^10.4.17",
